--- a/.gitignore
+++ b/.gitignore
@@ -70,7 +70,7 @@ android/app/libs
 # It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
 # screenshots whenever they are needed.
 # For more information about the recommended setup visit:
-# https://github.com/fastlane/fastlane/blob/master/fastlane/docs/Gitignore.md
+# https://docs.fastlane.tools/best-practices/source-control/
 
 fastlane/report.xml
 fastlane/Preview.html
@@ -95,3 +95,9 @@ javac-services*
 rn-android-docs
 ios/Pods
 yarn-error.log
+*/fastlane/report.xml
+*/fastlane/Preview.html
+*/fastlane/screenshots
+
+# Bundle artifact
+*.jsbundle
