--- a/package.json
+++ b/package.json
@@ -18,56 +18,57 @@
     "build:ios": "react-native bundle --entry-file index.js --platform ios --dev false --bundle-output ios/main.jsbundle --assets-dest ios"
   },
   "dependencies": {
-    "ansi-styles": "^2.2.1",
-    "deepmerge": "^1.3.2",
-    "fbjs": "^0.8.8",
-    "global": "^4.3.1",
-    "lodash": "^4.17.4",
-    "moment": "^2.17.1",
-    "nachos-ui": "^0.1.0",
-    "native-base": "~2.0.0",
-    "prop-types": "^15.5.8",
-    "react": "^15.5.0",
-    "react-native": "^0.42.0",
-    "react-native-android-back-button": "^0.3.0",
-    "react-native-camera": "^0.6.0",
+    "ansi-styles": "^3.2.1",
+    "deepmerge": "^2.1.0",
+    "fbjs": "^0.8.16",
+    "global": "^4.3.2",
+    "lodash": "^4.17.10",
+    "moment": "^2.22.1",
+    "nachos-ui": "^0.1.2",
+    "native-base": "~2.4.3",
+    "prop-types": "^15.6.1",
+    "react": "16.3.2",
+    "react-native": "0.55.3",
+    "react-native-android-back-button": "https://github.com/asaturg/react-native-android-back-button.git",
+    "react-native-camera": "^1.1.2",
     "react-native-cli": "^2.0.1",
     "react-native-crypto-module": "https://github.com/zkrige/rn-crypto.git",
-    "react-native-datepicker": "^1.4.7",
-    "react-native-dialogs": "0.0.19",
-    "react-native-fingerprint-android": "git@github.com:io-digital/react-native-fingerprint-android.git#c01272bd73e780472d127378e4526982763ffe49",
+    "react-native-datepicker": "^1.7.2",
+    "react-native-deprecated-custom-components": "^0.1.2",
+    "react-native-dialogs": "0.0.21",
+    "react-native-fingerprint-android": "^0.1.7",
     "react-native-fingerprint-scanner": "^2.3.2",
-    "react-native-firebase": "^1.0.0-alpha12",
-    "react-native-geocoder": "^0.4.8",
-    "react-native-gesture-view": "^0.1.2",
-    "react-native-google-analytics-bridge": "^5.0.0",
-    "react-native-image-picker": "^0.26.3",
-    "react-native-keyboard-aware-scroll-view": "0.2.0",
-    "react-native-modal-dropdown": "^0.4.2",
-    "react-native-modal-picker": "0.0.16",
-    "react-native-qrcode": "^0.2.3",
-    "react-native-safe-area-view": "0.3.0",
-    "react-native-svg": "5.1.7",
-    "react-native-vector-icons": "^4.0.0",
-    "tcomb-form-native": "^0.6.4"
+    "react-native-firebase": "^4.0.7",
+    "react-native-geocoder": "^0.5.0",
+    "react-native-gesture-view": "^0.2.1",
+    "react-native-google-analytics-bridge": "^5.6.3",
+    "react-native-image-picker": "^0.26.7",
+    "react-native-keyboard-aware-scroll-view": "0.5.0",
+    "react-native-modal-dropdown": "^0.6.2",
+    "react-native-modal-selector": "^0.0.27",
+    "react-native-qrcode": "^0.2.6",
+    "react-native-safe-area-view": "0.7.0",
+    "react-native-svg": "6.3.1",
+    "react-native-vector-icons": "^4.6.0",
+    "tcomb-form-native": "^0.6.11"
   },
   "devDependencies": {
-    "babel-cli": "^6.3.17",
-    "babel-eslint": "^7.1.1",
-    "babel-jest": "^17.0.2",
-    "babel-polyfill": "^6.16.0",
+    "babel-cli": "^6.26.0",
+    "babel-eslint": "^8.2.3",
+    "babel-jest": "^22.4.3",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react-native": "^1.9.0",
-    "enzyme": "^2.8.0",
-    "enzyme-to-json": "^1.5.0",
-    "eslint": "^3.14.0",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-react": "^6.9.0",
-    "eslint-plugin-react-native": "^2.2.1",
-    "jest": "^19.0.2",
-    "react-addons-test-utils": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-test-renderer": "^15.4.1"
+    "babel-preset-react-native": "^4.0.0",
+    "enzyme": "^3.3.0",
+    "enzyme-to-json": "^3.3.3",
+    "eslint": "^4.19.1",
+    "eslint-plugin-promise": "^3.7.0",
+    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-react-native": "^3.2.1",
+    "jest": "^22.4.3",
+    "react-addons-test-utils": "^15.6.2",
+    "react-dom": "^16.3.2",
+    "react-test-renderer": "^16.3.2"
   },
   "jest": {
     "preset": "react-native",
