--- a/ios/Podfile
+++ b/ios/Podfile
@@ -14,6 +14,9 @@ target 'Lifekeyrn' do
     pod 'Firebase/Storage'
     pod 'Fabric'
     pod 'Crashlytics'
+
+  pod 'react-native-camera', :path => '../node_modules/react-native-camera'
+
 end
 
 
