--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "nachos-ui": "^0.1.2",
     "native-base": "~2.4.3",
     "prop-types": "^15.6.1",
-    "react": "16.3.1",
-    "react-native": "0.55.4",
-    "react-native-android-back-button": "https://github.com/asaturg/react-native-android-back-button.git",
+    "react": "^16.3.1",
+    "react-native": "^0.55.4",
+    "react-native-android-back-button": "https://github.com/zkrige/react-native-android-back-button.git",
     "react-native-camera": "^1.1.2",
     "react-native-cli": "^2.0.1",
     "react-native-code-push": "^5.3.3",
@@ -39,7 +39,7 @@
     "react-native-dialogs": "0.0.21",
     "react-native-fingerprint-android": "^0.1.7",
     "react-native-fingerprint-scanner": "^2.3.2",
-    "react-native-firebase": "^4.0.7",
+    "react-native-firebase": "^4.2.0",
     "react-native-geocoder": "^0.5.0",
     "react-native-gesture-view": "^0.2.1",
     "react-native-google-analytics-bridge": "^5.6.3",
