--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "prop-types": "^15.6.1",
     "react": "^16.4.0",
     "react-native": "^0.55.4",
+    "react-native-actionsheet": "^2.4.2",
     "react-native-android-back-button": "https://github.com/zkrige/react-native-android-back-button.git",
     "react-native-camera": "^1.1.2",
     "react-native-cli": "^2.0.1",
