--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -110,6 +110,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-camera')
     compile project(':react-native-code-push')
     compile project(':react-native-geocoder')
     compile project(':react-native-fingerprint-scanner')
@@ -121,7 +122,6 @@ dependencies {
     compile project(':react-native-image-picker')
     compile project(':react-native-svg')
     compile project(':react-native-dialogs')
-    compile project(':react-native-camera')
     compile project(':react-native-vector-icons')
 
     compile 'com.facebook.fresco:animated-base-support:1.1.0'
@@ -131,7 +131,8 @@ dependencies {
     compile "com.android.support:appcompat-v7:27.1.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
 
-    compile 'com.crashlytics.sdk.android:crashlytics:2.9.1'
+    compile 'com.crashlytics.sdk.android:crashlytics:2.9.3'
+    compile 'com.android.support:multidex:1.0.3'
 }
 
 // Run this once to be able to run the application with BUCK
