--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,19 +1,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.lifekeyrn"
-          android:versionCode="1"
-          android:versionName="1.0">
+          package="com.lifekeyrn">
   <uses-permission android:name="android.permission.INTERNET" />
   <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
   <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
   <uses-permission android:name="android.permission.VIBRATE" />
   <uses-permission android:name="android.permission.USE_FINGERPRINT" />
-  <uses-sdk android:minSdkVersion="16"
-            android:targetSdkVersion="22" />
+
   <application android:name=".MainApplication"
                android:allowBackup="true"
                android:label="@string/app_name"
                android:icon="@mipmap/lifekey_launcher"
-               android:theme="@style/AppTheme"
                android:launchMode="singleTask">
     <meta-data android:name="com.google.android.gms.version"
                android:value="@integer/google_play_services_version" />
