--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -116,16 +116,18 @@ dependencies {
     compile project(':react-native-fingerprint-scanner')
     compile project(':react-native-crypto-module')
     compile project(':react-native-fingerprint-android')
+    //compile project(':react-native-firebase')
+
     compile(project(':react-native-firebase')) {
         transitive = false
     }
-    compile project(':react-native-image-picker')
+    
     compile project(':react-native-svg')
     compile project(':react-native-dialogs')
     compile project(':react-native-vector-icons')
 
-    compile 'com.facebook.fresco:animated-base-support:1.1.0'
-    compile 'com.facebook.fresco:animated-gif:1.1.0'
+    compile 'com.facebook.fresco:animated-base-support:1.3.0'
+    compile 'com.facebook.fresco:animated-gif:1.3.0'
 
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:27.1.1"
