--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -117,14 +117,13 @@ dependencies {
     compile project(':react-native-crypto-module')
     compile project(':react-native-fingerprint-android')
     //compile project(':react-native-firebase')
-
     compile(project(':react-native-firebase')) {
         transitive = false
     }
-    
     compile project(':react-native-svg')
     compile project(':react-native-dialogs')
     compile project(':react-native-vector-icons')
+    compile project(':react-native-image-picker')
 
     compile 'com.facebook.fresco:animated-base-support:1.3.0'
     compile 'com.facebook.fresco:animated-gif:1.3.0'
