--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "reinstall_complete": "./bin/reinstall_complete",
     "android-dev": "adb reverse tcp:8081 tcp:8081",
     "build:ios": "react-native bundle --entry-file index.js --platform ios --dev false --bundle-output ios/main.jsbundle --assets-dest ios",
+    "build:android": "react-native bundle --entry-file index.js --platform android --dev false --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res",
     "codepush": "appcenter codepush release-react -d Production --mandatory --app LifeQi/LifeQi"
   },
   "dependencies": {
