--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
   <uses-permission android:name="android.permission.USE_FINGERPRINT" />
 
   <application android:name=".MainApplication"
-               android:allowBackup="true"
+               android:allowBackup="false"
                android:label="@string/app_name"
                android:icon="@mipmap/lifekey_launcher"
                android:launchMode="singleTask">
