--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,19 +1,22 @@
-target 'Lifekeyrn' do
-    platform :ios, '9.0'
-    use_frameworks!
-    inhibit_all_warnings!
+# Uncomment the next line to define a global platform for your project
+# platform :ios, '9.0'
 
-    pod 'Firebase/Auth'
-    pod 'Firebase/Analytics'
-    pod 'Firebase/Core', '~> 4.13.0'
-    pod 'Firebase/Database'
-    pod 'Firebase/DynamicLinks'
-    pod 'Firebase/Messaging', '~> 4.13.0'
-    pod 'Firebase/RemoteConfig'
-    pod 'Firebase/Storage'
-    pod 'Fabric'
-    pod 'Crashlytics'
+target 'Lifekeyrn' do
+  # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
+  # use_frameworks!
+
+  # Pods for Lifekeyrn
+
+pod 'Firebase/Auth'
+pod 'Firebase/Analytics'
+pod 'Firebase/Core', '~> 4.13.0'
+pod 'Firebase/Database'
+pod 'Firebase/DynamicLinks'
+pod 'Firebase/Messaging', '~> 4.13.0'
+pod 'Firebase/RemoteConfig'
+pod 'Firebase/Storage'
+pod 'Fabric'
+pod 'Crashlytics'
+
 
 end
-
-
