--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -22,6 +22,7 @@ project.ext.react = [
     entryFile: "index.js"
 ]
 
+
 apply from: "../../node_modules/react-native/react.gradle"
 
 // react-native-vector-icons
@@ -43,6 +44,7 @@ def enableSeparateBuildPerCPUArchitecture = false
  */
 def enableProguardInReleaseBuilds = false
 
+
 android {
     compileSdkVersion 27
     buildToolsVersion '27.0.3'
@@ -52,7 +54,7 @@ android {
         minSdkVersion 16
         targetSdkVersion 27
         versionCode 1
-        versionName packageJson.version
+        versionName "1.0.0"
 
         ndk {
             abiFilters "x86","armeabi-v7a"
@@ -148,7 +150,7 @@ dependencies {
 // Run this once to be able to run the application with BUCK
 // puts all compile dependencies into folder libs for BUCK to use
 task copyDownloadableDepsToLibs(type: Copy) {
-    from configurations.compile
+    from configurations.implementation
     into 'libs'
 }
 
