--- a/android/build.gradle
+++ b/android/build.gradle
@@ -18,6 +18,7 @@ buildscript {
 }
 
 allprojects {
+
     repositories {
         mavenLocal()
         jcenter()
@@ -37,6 +38,7 @@ ext {
     targetSdkVersion = 27
     buildToolsVersion = '27.0.3'
     supportlib_version = '27.1.1'
+    googlePlayServicesVersion = "15.0.1"
 }
 
 subprojects { subproject ->
