--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
     "react": "^16.4.0",
     "react-native": "^0.55.4",
     "react-native-actionsheet": "^2.4.2",
-    "react-native-android-back-button": "https://github.com/zkrige/react-native-android-back-button.git",
+    "react-native-android-back-button": "git+https://github.com/zkrige/react-native-android-back-button.git",
     "react-native-camera": "^1.1.2",
     "react-native-cli": "^2.0.1",
     "react-native-code-push": "^5.3.4",
-    "react-native-crypto-module": "https://github.com/zkrige/rn-crypto.git",
+    "react-native-crypto-module": "git+https://github.com/zkrige/rn-crypto.git",
     "react-native-datepicker": "^1.7.2",
     "react-native-deprecated-custom-components": "^0.1.2",
     "react-native-dialogs": "0.0.21",
