--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,6 +18,7 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
+android.enableAapt2=false
 
 LIFEKEY_DEV_RELEASE_STORE_FILE=dev-release-key.keystore
 LIFEKEY_DEV_RELEASE_KEY_ALIAS=dev-release-key
