--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -112,6 +112,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-camera')
     implementation project(':react-native-camera')
     implementation project(':react-native-code-push')
     implementation project(':react-native-geocoder')
