--- a/package.json
+++ b/package.json
@@ -75,7 +75,8 @@
     "jest": "^23.0.1",
     "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.4.0",
-    "react-test-renderer": "^16.4.0"
+    "react-test-renderer": "^16.4.0",
+    "reactotron-react-native": "^2.0.0"
   },
   "jest": {
     "preset": "react-native",
