--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -121,6 +121,7 @@ dependencies {
     implementation project(':react-native-fingerprint-android')
     implementation project(':react-native-firebase')
     compile project(':react-native-linear-gradient')
+    compile project(':react-native-restart')
     /*
     compile(project(':react-native-firebase')) {
         transitive = false
