--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -34,4 +34,7 @@ project(':react-native-dialogs').projectDir = new File(rootProject.projectDir, '
 include ':react-native-linear-gradient'
 project(':react-native-linear-gradient').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-linear-gradient/android')
 
+include ':react-native-restart'
+project(':react-native-restart').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-restart/android')
+
 include ':app'
